css/style.css
@media (prefers-color-scheme: light) {
body {
    background-color: #E4F5FF;
    color: #022534;
}
.main a {
    color: #022534;

}
}

@media (prefers-color-scheme: dark) {
body {
    background-color: #022534;
    color: #E4F5FF;
}
.main a {
    color: #E4F5FF;

}
}

* {
    box-sizing: border-box;
    padding: 0;
    margin: 0;
}

html {
    font-size: 62.5%;
    font-family: 'Open Sans', sans-serif;
}

.body {
    display: grid;
    grid-template-columns: repeat(5, 1fr);
    grid-template-rows: repeat(5, 1fr);
    grid-column-gap: 0px;
    grid-row-gap: 0px;
    width: 100vw;
    height: 100vh;
    justify-content: center;
    }

.header { 
    grid-area: 1 / 1 / 2 / 6; 
    justify-self: center;
    align-self: center;
    padding: 1rem;
}

.main { 
    grid-area: 2 / 1 / 5 / 6; 
    justify-self: center;
}

.footer { 
    grid-area: 5 / 1 / 6 / 6; 
    justify-self: center;
    align-self: end;
    padding-bottom: 1rem;
}

h1 {
    font-family: 'Bitter', serif;
    font-size: 4.0rem;
}

.main p {
    font-size: 2.0rem;
    padding: 1rem;
}
.main .main__links{
    justify-self: center;
    align-self: end;
}
.main a {
    font-size: 12.0rem;
    text-decoration: none;
    padding: 2rem;

}

.footer p {
    font-size: 2rem;
    font-weight: bold;
}

